fix: updates to styling
Moving pesticide count for range to right side to remove map navigation blocking. Changed styling for buttons to match bg, as they were unreadable.

--- a/src/index.css
+++ b/src/index.css
@@ -132,7 +132,7 @@
 
   .btn-cta {
     background-color: var(--accent-cta);
-    color: var(--noir);
+    color: var(--bg);
     @apply px-4 py-2 rounded-xl font-semibold transition-colors duration-200;
   }
   .btn-cta:hover {
